# xDimension

./: .gitignore  CMakeLists.txt  README.md
Doc/: ErrorsDoc  drawio.drawIo
src/: main.cpp
src/Classes/: Classes.hpp  Draw2D.cpp  Draw2D.hpp  Ftest.cpp  Ftest.hpp  Function.cpp  Function.hpp  Point.cpp  Point.hpp  Segment.cpp  Segment.hpp  Shape.cpp  TestPoint.cpp  TestPoint.hpp  UI.cpp  UI.hpp
src/Classes/UI/: Button.cpp  Button.hpp  Label.cpp  Label.hpp  Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp  UI.cpp  UI.hpp  UserInput.cpp  UserInput.hpp
